stoplight url edited
