# docs/swagger.json
@@ -11,9 +11,9 @@
         "version": "1.0"
     },
     "host": "localhost:8088",
-    "basePath": "/api/v1",
+    "basePath": "/",
     "paths": {
-        "/ldap/find": {
+        "/api/v1/ldap/find": {
             "post": {
                 "description": "EG;\u003cbr\u003eByRG81IDDPQFY9+9dSaWFKIA3Xp1vZhrpCjCg4XXR7gnNxLM9SvgTK1PFKMrsdE5s4mNRSIo8qJhzeZAdMi5zQfAhJOV8FDdmEs=\u003cbr\u003eSearchBase: dc=example,dc=com\u003cbr\u003eSearchFilter: (objectClass=person)",
                 "consumes": [
